html/css/style.less
/* ... */
	
	
	

/* FOOTER STYLES
====================================================================================================*/


	
footer{
	overflow: hidden;
	margin: 10px auto 15px;
	text-shadow: 0 1px 1px #fff;
	
	small{
		float: left;
		font-size: 1em;
		}
	
	nav{
		float: right;
		
		li{
			display: block;
			float: left;
			margin-right: 30px;
			}
		
		li:last-child{
			margin-right: 0;
			}
		
		a, a:visited{
			color: @text-color;
			}
		
		a:hover, a:focus{
			text-decoration: none;
			color: @link-color;
			}
		
		a:active{
			color: @link-active;
			}
		}
	}
	
	
	
/* TOUCHSCREEN OPTIMIZATION
====================================================================================================*/

.touch{
	.with-secondary{
		.secondary{
			a.flag, a.delete, a.edit, a.flag:visited, a.delete:visited, a.edit:visited{
				opacity: .25;
				}
			}
		}
	}
	
	
	
/* MEDIA QUERIES
====================================================================================================*/

@media screen and (max-width: 950px) {
	#content{
		
		section.small{
			
			article{
				
				.tags{
					a:last-child{
						display: none;
						}
					}
				
				.item-image{
					
					.calendar-icon{
						
						.month{
							font-size: .7em;
							}
							
						.day{
							font-size: 1.5em;
							}
						
						.download{
							text-align: center;
							
							img{
								display: none;
								}
							}
						}
					}
				}
			}
		}
	
	form{
		> .helper-link{
			display: none;
			}
		}
	}

@media screen and (max-device-width: 950px) {
	#content{
		
		section.small{
			
			article{
				
				.tags{
					a:last-child{
						display: none;
						}
					}
				
				.item-image{
					
					.calendar-icon{
						
						.month{
							font-size: .7em;
							}
							
						.day{
							font-size: 1.5em;
							}
						
						.download{
							text-align: center;
							
							img{
								display: none;
								}
							}
						}
					}
				}
			}
		}
	
	form{
		> .helper-link{
			display: none;
			}
		}
	}

@media screen and (max-width: 830px) {
	header{
		nav{
			ul{
				font-size: 1.1em;
				}
			}
		}
		
	#content{
		
		section.mega{
			width: 100%;
			}
		
		section.large{
			width: 100%;
			}
		
		section.medium{
			width: 66%;
			
			article{
				width: 90%;
				}
			}
		
		section.small{
			
			article{
				
				h2, p{
					}
				
				h2{
					}
				
				.tags{
					a:last-child{
						display: none;
						}
					}
				
				.item-image{
					
					.calendar-icon{
							
						.day{
							font-size: 1.3em;
							}
						}
					}
				}
			}
		
		#share{
			display: none;
			}
		}
	
	#content.start-page{
		
		section.image-grid{
			p{
				width: 26%;
				margin-right: 11%;
				}
				
			p:nth-child(3n+1){
				margin-right: 0;
				}
			
			p:last-child{
				display: none;
				}
			}
			
		#sign-in{
			display: none;
			}
		}
	}

@media screen and (max-device-width: 830px) {
	header{
		nav{
			ul{
				font-size: 1.1em;
				}
			}
		}
		
	#content{
		
		section.mega{
			width: 100%;
			}
		
		section.large{
			width: 100%;
			}
		
		section.medium{
			width: 66%;
			
			article{
				width: 90%;
				}
			}
		
		section.small{
			
			article{
				
				h2, p{
					}
				
				h2{
					}
				
				.tags{
					a:last-child{
						display: none;
						}
					}
				
				.item-image{
					
					.calendar-icon{
							
						.day{
							font-size: 1.3em;
							}
						}
					}
				}
			}
		
		#share{
			display: none;
			}
		}
	
	#content.start-page{
		
		section.image-grid{
			p{
				width: 26%;
				margin-right: 11%;
				}
				
			p:nth-child(3n+1){
				margin-right: 0;
				}
			
			p:last-child{
				display: none;
				}
			}
			
		#sign-in{
			display: none;
			}
		}
	}

@media screen and (max-width: 780px) {
	header{
		nav{
			
			ul{
				overflow: hidden;
				clear: both;
				float: none;
				width: 100%;
				margin: 0 auto;
				font-size: 1.2em;
				text-align: center;
				
				li{
					float: none;
					display: inline;
					}
				}
				
			form{
				clear: both;
				float: none;
				width: 80%;
				margin: 3% auto 0;
				
				input{
					height: 12px;
					}
				}
			}
		}
		
	#content{
		
		section.mega{
			}
		
		section.large{
			
			}
		
		section.medium{
			clear: both;
			width: 100%;
			margin-bottom: 50px !important;
			
			article{
				width: 95%;
				}
			}
		
		section.small{
			float: left;
			width: 48%;
			margin-right: 4%;
			
			article{
				.item-image{
				
					.calendar-icon{
						.month{
							font-size: .9em;
							}
						
						.day{
							font-size: 1.9em;
							}
						}
					}
				}
			}
		
		section.small + section.small{
			margin-right: 0;
			}
		
		section#latest{
			min-height: 0 !important;
			}
		
		#people{
			display: none;
			}
		
		#contact{
			width: 100%;
			
			ul{
				width: 100%;
				
				img{
					min-width: 40px;
					max-width: 40px;
					margin-right: 6.666666667%;
					}
				}
			}
		}
	
	#content.start-page{
		section.small:last-child{
			margin-left: 4%;
			}
		}
	
	footer{
		small{
			display: block;
			clear: both;
			float: none;
			width: 100%;
			font-size: 1em;
			text-align: center;
			}
		
		nav{
			clear: both;
			float: none;
			width: 100%;
			margin-bottom: 2%;
			text-align: center;
			
			li{
				display: inline;
				float: none;
				margin-right: 3%;
				}
			}
		}
	}
/* ... */

